# tinyml_poc_app

backend/: .pdm.toml  pyproject.toml
backend/tinyml_backend/: db.sqlite3  manage.py
backend/tinyml_backend/apis/: models.py  serializers.py  urls.py  views.py
backend/tinyml_backend/apis/migrations/: 0001_initial.py  0002_alter_recapmodel_timestamp.py
backend/tinyml_backend/tinyml_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/expo-app/: .gitignore  App.js  AppContext.js  app.json  localization.js  metro.config.js  package-lock.json  package.json
frontend/expo-app/android/app/src/main/: AndroidManifest.xml
frontend/expo-app/assets/svgs/: .gitkeep
frontend/expo-app/screens/: Home.screen.jsx
frontend/expo-app/themes/: dark.color.js  index.js  light.color.js
