[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marva", email = "matthieu.fraiz@epitech.eu"},
]
dependencies = [
    "djangorestframework>=3.15.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
